--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
 dotenvy = "0.15.7"
 log = "0.4.22"
+mobot = "0.3.10"
 pretty_env_logger = "0.5.0"
-teloxide = "0.12.2"
 tokio = { version = "1", features = ["full"] }
