--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ dotenvy = "0.15.7"
 log = "0.4.22"
 mobot = "0.3.10"
 pretty_env_logger = "0.5.0"
+serde = "1.0.205"
 tokio = { version = "1", features = ["full"] }
