--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 dotenvy = "0.15.7"
+futures = "0.3.30"
 log = "0.4.22"
 mobot = "0.3.10"
 pretty_env_logger = "0.5.0"
 serde = "1.0.205"
 tokio = { version = "1", features = ["full"] }
+wither = "0.9.0"
